--- a/front-end/package.json
+++ b/front-end/package.json
@@ -7,7 +7,7 @@
   },
   "dependencies": {
     "@types/react": "18.0.28",
-    "bootstrap": "5.2.3",
+    "bootstrap": "^5.2.3",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.7",
     "i18next": "^23.7.6",
@@ -21,6 +21,7 @@
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.10",
     "@types/node": "18.15.0",
     "@types/react-datepicker": "^4.15.0",
     "autoprefixer": "^10.4.16",
