--- a/front-end/package.json
+++ b/front-end/package.json
@@ -24,13 +24,17 @@
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.1.0",
     "@types/bootstrap": "^5.2.10",
+    "@types/jest": "^29.5.14",
     "@types/node": "18.15.0",
     "@types/react-datepicker": "^4.15.0",
     "autoprefixer": "^10.4.16",
-    "esbuild": "^0.24.0",
+    "esbuild": "^0.24.1",
     "esbuild-jest": "^0.4.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
+    "ts-jest": "^29.2.5",
     "typescript": "4.9.5"
   }
 }
